Adding a to do item (Static)

--- a/to-do-list/index.html
+++ b/to-do-list/index.html
@@ -6,6 +6,14 @@
   <title>To Do</title>
 </head>
 <body>
+  <form id="addToDo">
+    <input id="inputToDo" type="text" placeholder="Add task">
+    <button type="submit">Add</button>
+  </form>
+
+  <div id="toDoHolder" class=""></div>
+  <div id="doneHolder" class=""></div>
+
   <script type="text/javascript" src="javascript/script.js"></script>
 </body>
 </html>
